--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -30,7 +30,7 @@ jobs:
       fail-fast: false # don't abort if one of the build failse
       matrix:
         include:
-          - name: Linux-x64-qmake-static
+          - name: Linux-x64-qmake-gcc-static
             release-name: Linux-x64 # specify a separate name for all builds that should be included in releases
             runs-on: ubuntu-18.04
             system-rtaudio: false
@@ -49,7 +49,7 @@ jobs:
             # meson-library-type: shared # shared, static, both
             # static-analysis: true # run clang-tidy static analysis (meson/Linux only)
             
-          - name: Linux-x64-qmake-static-bundled_rtaudio
+          - name: Linux-x64-qmake-gcc-static-bundled_rtaudio
             runs-on: ubuntu-18.04
             system-rtaudio: false
             bundled-rtaudio: true
@@ -61,7 +61,7 @@ jobs:
             # binary-path: binary
             build-system: qmake
 
-          - name: Linux-x64-qmake-shared-nogui
+          - name: Linux-x64-qmake-gcc-shared-nogui
             runs-on: ubuntu-18.04
             system-rtaudio: false
             bundled-rtaudio: false
@@ -69,7 +69,7 @@ jobs:
             weakjack: false
             build-system: qmake
 
-          - name: Linux-x64-meson-shared
+          - name: Linux-x64-meson-gcc-shared-bundled_rtaudio
             runs-on: ubuntu-20.04
             system-rtaudio: false
             bundled-rtaudio: true
@@ -81,7 +81,7 @@ jobs:
             meson-library-type: shared
             static-analysis: true
             
-          # - name: Linux-x64-meson-shared # meson static build doesn't work currently
+          # - name: Linux-x64-meson-gcc-shared # meson static build doesn't work currently
           #   runs-on: ubuntu-18.04
           #   system-rtaudio: false
           #   bundled-rtaudio: false
@@ -94,7 +94,7 @@ jobs:
           #   build-system: meson
           #   meson-library-type: static
 
-          - name: macOS-x64-qmake-static
+          - name: macOS-x64-qmake-clang-static
             release-name: macOS-x64
             runs-on: macos-10.15
             system-rtaudio: true
@@ -109,7 +109,7 @@ jobs:
             installer-path: installer
             build-system: qmake
 
-          - name: macOS-x64-qmake-static-bundled_rtaudio
+          - name: macOS-x64-qmake-clang-static-bundled_rtaudio
             runs-on: macos-10.15
             system-rtaudio: false
             bundled-rtaudio: true
@@ -123,7 +123,7 @@ jobs:
             # installer-path: installer
             build-system: qmake
 
-          - name: macOS-x64-meson-shared
+          - name: macOS-x64-meson-clang-shared-bundled_rtaudio
             runs-on: macos-10.15
             system-rtaudio: false
             bundled-rtaudio: true
@@ -136,7 +136,7 @@ jobs:
             build-system: meson
             meson-library-type: both
             
-          - name: Windows-x64-qmake-static
+          - name: Windows-x64-qmake-gcc-static
             release-name: Windows-x64
             runs-on: windows-2019
             system-rtaudio: true
@@ -151,7 +151,7 @@ jobs:
             installer-path: installer
             build-system: qmake
             
-          - name: Windows-x64-qmake-static-bundled_rtaudio
+          - name: Windows-x64-qmake-gcc-static-bundled_rtaudio
             runs-on: windows-2019
             system-rtaudio: false
             bundled-rtaudio: true
@@ -163,7 +163,7 @@ jobs:
             # binary-path: binary
             build-system: qmake
 
-          - name: Windows-x64-qmake-shared
+          - name: Windows-x64-qmake-gcc-shared
             runs-on: windows-2019
             system-rtaudio: true
             bundled-rtaudio: false
@@ -175,7 +175,7 @@ jobs:
             # binary-path: binary
             build-system: qmake
 
-          - name: Windows-x64-meson-shared
+          - name: Windows-x64-meson-msvc-shared
             runs-on: windows-2019
             system-rtaudio: true
             bundled-rtaudio: false
@@ -188,7 +188,7 @@ jobs:
             build-system: meson
             meson-library-type: shared
 
-          - name: Windows-x64-meson-shared-bundled_rtaudio
+          - name: Windows-x64-meson-msvc-shared-bundled_rtaudio
             runs-on: windows-2019
             system-rtaudio: false
             bundled-rtaudio: true
