--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,7 +82,7 @@ set(qjacktrip_SRC
   src/PacketHeader.cpp
   src/RingBuffer.cpp
   src/JitterBuffer.cpp
-  src/PoolBuffer.cpp
+  src/Regulator.cpp
   src/Compressor.cpp
   src/Limiter.cpp
   src/Reverb.cpp
