--- a/meson.build
+++ b/meson.build
@@ -27,7 +27,7 @@ src = [	'src/DataProtocol.cpp',
 	'src/PacketHeader.cpp',
 	'src/RingBuffer.cpp',
 	'src/JitterBuffer.cpp',
-	'src/PoolBuffer.cpp',
+	'src/Regulator.cpp',
 	'src/Settings.cpp',
 	'src/UdpDataProtocol.cpp',
 	'src/UdpHubListener.cpp',
