--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,6 +5,7 @@ nav:
   - Home: index.md
   - User Guide:
     - Installation: Install.md
+    - Using custom JACK server name: CustomJackServerName.md
   - Developer Guide:
     - QMake Build:
       - Linux: Build/Linux.md
