Further work on Virtual Studio interface
Also updated jacktrip.pro so it can be built with qmake as well as cmake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,6 +127,7 @@ if (NOT nogui)
     set (qjacktrip_SRC ${qjacktrip_SRC}
       src/gui/virtualstudio.cpp
       src/gui/vsServerInfo.cpp
+      src/gui/vsQuickView.cpp
       src/gui/qjacktrip.qrc
     )
   else ()
