--- a/.github/workflows/jacktriplabs.yml
+++ b/.github/workflows/jacktriplabs.yml
@@ -36,6 +36,7 @@ jobs:
             system-rtaudio: true
             bundled-rtaudio: false
             nogui: false
+            novs: false
             weakjack: true
             static-qt-version: 5.12.11
             qt-static-cache-key: 'v05'
@@ -51,6 +52,7 @@ jobs:
             system-rtaudio: false
             bundled-rtaudio: true
             nogui: false
+            novs: false
             weakjack: true
             static-qt-version: 5.15.2
             qt-static-cache-key: 'v04'
@@ -226,6 +228,9 @@ jobs:
           fi
           if [[ "${{ matrix.nogui }}" == true ]]; then 
             CONFIG_STRING="nogui $CONFIG_STRING"
+          fi
+          if [[ "${{ matrix.novs }}" == true ]]; then 
+            CONFIG_STRING="novs $CONFIG_STRING"
           fi
           if [[ "${{ matrix.weakjack }}" == true ]]; then 
             CONFIG_STRING="weakjack $CONFIG_STRING"
