Change cpp standard to GNU variant of C++17

--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,5 @@
 project('jacktrip', ['cpp','c'],
-		default_options: ['cpp_std=c++17','warning_level=2'])
+		default_options: ['cpp_std=gnu++17','warning_level=2'])
 
 if get_option('profile') == 'development'
   application_id = 'org.jacktrip.JackTrip.Devel'
