add qml import path

--- a/.github/workflows/jacktriplabs.yml
+++ b/.github/workflows/jacktriplabs.yml
@@ -221,6 +221,8 @@ jobs:
           CONFIG_STRING="noclean"
           if [[ -n "${{ matrix.static-qt-version }}" ]]; then 
             CONFIG_STRING="static $CONFIG_STRING"
+            export QML_IMPORT_PATH=$QT_STATIC_BUILD_PATH/qml
+            export QML2_IMPORT_PATH=$QT_STATIC_BUILD_PATH/qml
           fi
           if [[ "${{ matrix.system-rtaudio }}" == true ]] || [[ "${{ matrix.bundled-rtaudio }}" == true ]]; then 
             CONFIG_STRING="rtaudio $CONFIG_STRING"
