--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -159,6 +159,7 @@ jobs:
             weakjack: true
             vcpkg-triplet: x64-mingw-dynamic
             qt-arch: 'win64_mingw81'
+            qt-cache-key: 'v01'
             # jacktrip-path: release/jacktrip.exe
             # binary-path: binary
             build-system: qmake
@@ -171,6 +172,7 @@ jobs:
             weakjack: true
             vcpkg-triplet: x64-windows
             qt-arch: 'win64_msvc2019_64'
+            qt-cache-key: 'v01'
             # jacktrip-path: jacktrip.exe
             # binary-path: binary
             build-system: meson
@@ -183,6 +185,7 @@ jobs:
             nogui: false
             weakjack: true
             qt-arch: 'win64_msvc2019_64'
+            qt-cache-key: 'v01'
             # jacktrip-path: jacktrip.exe
             # binary-path: binary
             build-system: meson
@@ -301,7 +304,7 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ../Qt
-          key: $${{ runner.os }}-QtCache-${{ env.QT_VERSION }}-${{ matrix.build-system }}
+          key: $${{ runner.os }}-QtCache-${{ env.QT_VERSION }}-${{ matrix.build-system }}_${{matrix.qt-cache-key}}
       - name: install Qt
         uses: jurplel/install-qt-action@v2
         if: runner.os == 'Windows' && !matrix.static-qt-version
