Fix various typos
Found via `codespell -q 3 -S ./faust-src -L ba, buss,numer,tipe`

--- a/.github/workflows/jacktrip.yml
+++ b/.github/workflows/jacktrip.yml
@@ -518,7 +518,7 @@ jobs:
       - name: download artifacts
         uses: actions/download-artifact@v2
         with:
-          path: ${{ env.DOWNLOAD_PATH }} # no "name" paramter - download all artifacts
+          path: ${{ env.DOWNLOAD_PATH }} # no "name" parameter - download all artifacts
       - name: upload to the release page
         uses: softprops/action-gh-release@v1
         with:
