Additional UI fixes
Get rid of update stream selection when NO_UPDATER is set.

Change maximum value for broadcast buffer length in GUI.

Some changes specific to @psiborg112's builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ set(nogui FALSE)
 set(rtaudio TRUE)
 set(weakjack TRUE)
 set(novs FALSE)
+add_compile_definitions(NO_UPDATER)
 add_compile_definitions(QT_OPENSOURCE)
 
 if (nogui)
