--- a/meson.build
+++ b/meson.build
@@ -107,13 +107,15 @@ else
 			'src/gui/virtualstudio.cpp',
 			'src/gui/vsServerInfo.cpp',
 			'src/gui/vsQuickView.cpp',
-			'src/gui/vsWebSocket.cpp'
+			'src/gui/vsWebSocket.cpp',
+			'src/gui/vsUrlHandler.cpp'
 		]
 		moc_h += [
 			'src/gui/virtualstudio.h',
 			'src/gui/vsServerInfo.h',
 			'src/gui/vsQuickView.h',
-			'src/gui/vsWebSocket.h'
+			'src/gui/vsWebSocket.h',
+			'src/gui/vsUrlHandler.h'
 		]
 		qt5_dep = dependency('qt5', modules: ['Core', 'Gui', 'Network', 'Widgets', 'Quick', 'Qml', 'Svg', 'NetworkAuth', 'WebSockets'], include_type: 'system')
 		qres = ['src/gui/qjacktrip.qrc']
