--- a/meson.build
+++ b/meson.build
@@ -30,6 +30,7 @@ src = [	'src/DataProtocol.cpp',
 	'src/Regulator.cpp',
 	'src/Settings.cpp',
 	'src/UdpDataProtocol.cpp',
+	'src/IcmpDataProtocol.cpp',
 	'src/UdpHubListener.cpp',
 	'src/AudioInterface.cpp',
 	'src/Compressor.cpp',
@@ -45,6 +46,7 @@ moc_h = ['src/DataProtocol.h',
 	'src/PacketHeader.h',
 	'src/Settings.h',
 	'src/UdpDataProtocol.h',
+	'src/IcmpDataProtocol.h',
 	'src/UdpHubListener.h',
 	'src/Auth.h',
 	'src/SslServer.h']
