Revert "Desktop file update"
This reverts commit 000092cebac8004a7a617fbc9211a7b82713a3b0.

--- a/linux/org.jacktrip.JackTrip.desktop.in
+++ b/linux/org.jacktrip.JackTrip.desktop.in
@@ -3,8 +3,7 @@ Type=Application
 Name=JackTrip@name_suffix@
 Comment=Network Music Performance over the Internet
 Comment[fr]=Performance de musique en réseau sur internet
-Exec=jacktrip --gui --deeplink %u
+Exec=jacktrip
 Icon=@icon@
 Terminal=false
 StartupWMClass=@wmclass@
-MimeType=application/jacktrip;
