started vu meter implementation

--- a/meson.build
+++ b/meson.build
@@ -34,6 +34,7 @@ src = [	'src/DataProtocol.cpp',
 	'src/AudioInterface.cpp',
 	'src/Compressor.cpp',
 	'src/Limiter.cpp',
+	'src/VuMeter.cpp',
 	'src/Reverb.cpp',
 	'src/main.cpp',
 	'src/SslServer.cpp',
