Don't print warning when launching from desktop

--- a/linux/org.jacktrip.JackTrip.desktop.in
+++ b/linux/org.jacktrip.JackTrip.desktop.in
@@ -3,7 +3,7 @@ Type=Application
 Name=JackTrip@name_suffix@
 Comment=Network Music Performance over the Internet
 Comment[fr]=Performance de musique en réseau sur internet
-Exec=jacktrip --gui --deeplink %u
+Exec=/bin/bash -c "if [ -z '%u' ]; then jacktrip; else jacktrip --gui --deeplink %u; fi"
 Icon=@icon@
 Terminal=false
 StartupWMClass=@wmclass@
